# edge-inference-rt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
configs/: constrained_2gb.toml  performance.toml  rpi4_default.toml
crates/memory-manager/: Cargo.toml
crates/memory-manager/src/: budget.rs  error.rs  guard.rs  lib.rs  pool.rs  stats.rs
crates/model-ir/: Cargo.toml
crates/model-ir/src/: error.rs  graph.rs  layer.rs  lib.rs  loader.rs  manifest.rs
crates/partition-planner/: Cargo.toml
crates/partition-planner/src/: error.rs  lib.rs  plan.rs
crates/partition-planner/src/strategy/: greedy.rs  mod.rs  sequential.rs  speculative.rs
crates/resource-monitor/: Cargo.toml
crates/resource-monitor/src/: cpu.rs  error.rs  lib.rs  memory.rs  snapshot.rs  thermal.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: layer_execution.rs
crates/runtime/examples/: strategy_comparison.rs
crates/runtime/src/: config.rs  engine.rs  error.rs  lib.rs  metrics.rs  weight_loader.rs
crates/runtime/tests/: integration.rs
crates/tensor-core/: Cargo.toml
crates/tensor-core/benches/: tensor_ops.rs
crates/tensor-core/src/: dtype.rs  error.rs  lib.rs  shape.rs  tensor.rs
crates/tensor-core/src/ops/: gelu_op.rs  layer_norm_op.rs  matmul_op.rs  mod.rs  softmax_op.rs
docs/: architecture.md  deployment.md
docs/diagrams/: README.md
