# Copyright (c) 2025 Dimitris Kafetzis
#
# Licensed under the MIT License.
# See LICENSE file in the project root for full license information.
#
# SPDX-License-Identifier: MIT

[workspace]
name = "edge-inference-rt"
resolver = "2"

members = [
    "crates/tensor-core",
    "crates/resource-monitor",
    "crates/model-ir",
    "crates/memory-manager",
    "crates/partition-planner",
    "crates/runtime",
    "bin/edge-rt-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dimitris <dimitris@example.com>"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
ndarray = "0.16"
memmap2 = "0.9"
safetensors = "0.4"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1"
proptest = "1.4"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
