# Copyright (c) 2025 Dimitris Kafetzis
#
# Licensed under the MIT License.
# See LICENSE file in the project root for full license information.
#
# SPDX-License-Identifier: MIT

[package]
name = "resource-monitor"
description = "RPi 4 system resource monitoring: CPU, memory, and thermal state via /sys and /proc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
# proptest.workspace = true  # Uncomment for Rust 1.80+
