# Copyright (c) 2025 Dimitris Kafetzis
#
# Licensed under the MIT License.
# See LICENSE file in the project root for full license information.
#
# SPDX-License-Identifier: MIT

[package]
name = "runtime"
description = "Async execution engine that orchestrates partitioned transformer inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tensor-core = { path = "../tensor-core" }
model-ir = { path = "../model-ir" }
memory-manager = { path = "../memory-manager" }
partition-planner = { path = "../partition-planner" }
resource-monitor = { path = "../resource-monitor" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
memmap2.workspace = true
safetensors.workspace = true
toml.workspace = true

[dev-dependencies]
# proptest.workspace = true  # Uncomment for Rust 1.80+
# criterion.workspace = true  # Uncomment for Rust 1.80+
tracing-subscriber.workspace = true
